<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rajanikaparthy.bmicalculator.BMIActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_bmi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="114dp">

        <TextView
            android:id="@+id/heightTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/height"
            app:layout_constraintBottom_toBottomOf="@+id/heightEV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/heightEV" />

        <EditText
            android:id="@+id/heightEV"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enterHeight"
            android:inputType="number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/heightTV"
            app:layout_constraintTop_toBottomOf="@+id/height_click" />

        <Spinner
            android:id="@+id/spinnerHeight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="265dp">

        <TextView
            android:id="@+id/weightTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/weight"
            app:layout_constraintBottom_toBottomOf="@+id/weightEV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weightEV" />

        <EditText
            android:id="@+id/weightEV"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enterWeight"
            android:inputType="number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weightTV"
            app:layout_constraintTop_toBottomOf="@+id/heightEV" />

        <Spinner
            android:id="@+id/spinnerWeight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="175dp">

        <Button
            android:id="@+id/calculateBV"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/holo_orange_light"
            android:onClick="onClick"
            android:text="@string/calculate"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightEV" />

        <TextView
            android:id="@+id/bmiValue"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/bmiValue"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateBV" />

        <ListView
            android:id="@+id/bmiList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:listSelector="@android:color/holo_red_dark"
            android:textAlignment="center" />
    </LinearLayout>


</LinearLayout>
